Fix overlap issue, all boxes in row

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -75,7 +75,7 @@ button.cancel {
   font-weight: bold;
   font-size: 20px;
   display: flex;
-  flex-shrink: 0;
+  flex-shrink: 0.1;
 }
 
 .container{
